--- a/task-manager/src/app/features/task-board/task-board.html
+++ b/task-manager/src/app/features/task-board/task-board.html
@@ -1,31 +1,29 @@
 <div class="container py-4">
-  <div class="row">
-    <div class="col-md-4">
-      <app-task-form
-        [task]="selectedTask"
-        (save)="selectedTask ? onUpdate($event) : onCreate($event)">
-      </app-task-form>
+    <div>
+        <h1 class="mb-4 text-center">Task Manager</h1>
     </div>
-
-    <div class="col-md-8">
-      <ng-container *ngIf="tasks.length > 0; else noTasks">
-        <div cdkDropList (cdkDropListDropped)="drop($event)">
-          <div *ngFor="let task of tasks" cdkDrag>
-            <app-task-card
-              [task]="task"
-              (edit)="onEditRequest($event)"
-              (delete)="onDelete($event)">
-            </app-task-card>
-          </div>
+    <div class="row">
+        <div class="col-md-4">
+            <app-task-form [task]="selectedTask" (save)="selectedTask ? onUpdate($event) : onCreate($event)">
+            </app-task-form>
         </div>
-      </ng-container>
 
-      <ng-template #noTasks>
-        <mat-card class="text-center p-4">
-          <mat-icon>info</mat-icon>
-          <p class="text-muted">No tasks to show.</p>
-        </mat-card>
-      </ng-template>
+        <div class="col-md-8" style="max-height: 569px; overflow-y: scroll;">
+            <ng-container *ngIf="tasks.length > 0; else noTasks">
+                <div cdkDropList (cdkDropListDropped)="drop($event)">
+                    <div *ngFor="let task of tasks; trackBy: trackByTask" cdkDrag>
+                        <app-task-card [task]="task" (edit)="onEditRequest($event)" (delete)="onDelete($event)">
+                        </app-task-card>
+                    </div>
+                </div>
+            </ng-container>
+
+            <ng-template #noTasks>
+                <mat-card class="text-center p-4">
+                    <mat-icon>info</mat-icon>
+                    <p class="text-muted">No tasks to show.</p>
+                </mat-card>
+            </ng-template>
+        </div>
     </div>
-  </div>
 </div>
